[gd_scene load_steps=3 format=3 uid="uid://c2mxwc6kxe5m2"]

[ext_resource type="Script" path="res://addons/github_to_itch/ui/config.gd" id="1_06q30"]
[ext_resource type="PackedScene" uid="uid://bk128k0tftsey" path="res://addons/github_to_itch/ui/info_bubble.tscn" id="2_kphco"]

[node name="ScrollContainer" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
script = ExtResource("1_06q30")

[node name="Config" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Control" type="VBoxContainer" parent="Config"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItchInfo" type="PanelContainer" parent="Config/Control"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Config/Control/ItchInfo"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="GridContainer" type="GridContainer" parent="Config/Control/ItchInfo/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Label" type="Label" parent="Config/Control/ItchInfo/MarginContainer/GridContainer"]
layout_mode = 2
text = "Itch Username:"
vertical_alignment = 2

[node name="Username" type="LineEdit" parent="Config/Control/ItchInfo/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "username"
expand_to_text_length = true

[node name="Info" parent="Config/Control/ItchInfo/MarginContainer/GridContainer" instance=ExtResource("2_kphco")]
layout_mode = 2

[node name="Example" type="Label" parent="Config/Control/ItchInfo/MarginContainer/GridContainer/Info"]
modulate = Color(1, 1, 1, 0.4)
layout_mode = 2
text = "What you log in with"

[node name="Label2" type="Label" parent="Config/Control/ItchInfo/MarginContainer/GridContainer"]
layout_mode = 2
text = "Itch Project Name:"
vertical_alignment = 2

[node name="ProjectName" type="LineEdit" parent="Config/Control/ItchInfo/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "project-name"
expand_to_text_length = true

[node name="Info2" parent="Config/Control/ItchInfo/MarginContainer/GridContainer" instance=ExtResource("2_kphco")]
layout_mode = 2

[node name="Label4" type="Label" parent="Config/Control/ItchInfo/MarginContainer/GridContainer/Info2"]
modulate = Color(1, 1, 1, 0.4)
layout_mode = 2
text = "Found in itch url"

[node name="PanelContainer" type="PanelContainer" parent="Config/Control"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Config/Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Config/Control/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Instructions" type="RichTextLabel" parent="Config/Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
theme_override_constants/outline_size = 0
bbcode_enabled = true
text = "[b]If you haven't setup your project in Itch, [color=#8af][url=https://itch.io/dashboard]do that first[/url][/color][/b].

[font_size=24][center]Secrets in Github[/center][/font_size]
[ol] Go to  [color=#8af][url]https://itch.io/user/settings/api-keys[/url][/color] and generate a new api key or use an existing one.
 Copy that code and go to your github repo settings
 On the lefthand side find Secrets > Actions and add the API key as a secret with the name [code][bgcolor=#444] BUTLER_API_KEY [/bgcolor][/code][/ol]

[center][img=center,center]res://addons/github_to_itch/assets/secrets.png[/img][/center]"
fit_content_height = true
scroll_active = false
selection_enabled = true
deselect_on_focus_loss_enabled = false

[connection signal="text_changed" from="Config/Control/ItchInfo/MarginContainer/GridContainer/Username" to="." method="_on_username_text_changed"]
[connection signal="text_changed" from="Config/Control/ItchInfo/MarginContainer/GridContainer/ProjectName" to="." method="_on_project_name_text_changed"]
[connection signal="meta_clicked" from="Config/Control/PanelContainer/MarginContainer/VBoxContainer/Instructions" to="." method="_on_meta_clicked"]
